--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "description": "",
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
-    "flowbite": "^3.1.2",
+    "flowbite": "^3.1.2"
+  },
+  "devDependencies": {
     "tailwindcss": "^4.0.9"
   }
 }
